Fix spacing and positioning, and rename a function parameter

--- a/src/components/MultiStepForm/MultiStepForm.css
+++ b/src/components/MultiStepForm/MultiStepForm.css
@@ -17,5 +17,6 @@
             "stepsList stepContainer"
             "stepsList navButtons"
         ;
+        gap: 0 2rem;
     }
 }
